--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,16 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: grey;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+.testsect {
+  height: 100vh;
+  background: hsl(0, 64%, 56%);
 }
